[gd_scene load_steps=3 format=3 uid="uid://dh7afqna0d576"]

[ext_resource type="Script" path="res://Scripts/Components/neighbor_component.gd" id="1_g7y6j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_joh0p"]
radius = 400.0

[node name="NeighborComponent" type="Node2D"]
script = ExtResource("1_g7y6j")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color(0, 0.894118, 0, 1)
show_behind_parent = true
shape = SubResource("CircleShape2D_joh0p")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
